--- a/romantic.css
+++ b/romantic.css
@@ -102,7 +102,7 @@ h2:hover {
     width: 100%;
 //    max-width: 860px;
 }
-.gallery h1 {
+.gallery {
     display: inline-block;
     font-size: 2.2em;
     margin: 0 auto;
@@ -310,7 +310,7 @@ h2:hover {
 	}
 	h1 {
 	float:left;
-    font-size: 2em;
+    font-size: 1.8em;
 }
     .gallery {
         margin: 20px auto 0;
@@ -356,7 +356,7 @@ h2:hover {
 	}
 	h1 {
 	float:left;
-    font-size: 2em;
+    font-size: 1.8em;
 }
     .gallery {
         margin: 20px auto 0;
