--- a/romantic.css
+++ b/romantic.css
@@ -102,7 +102,7 @@ h2:hover {
     width: 100%;
 //    max-width: 860px;
 }
-.gallery {
+.gallery h1{
     display: inline-block;
     font-size: 2.2em;
     margin: 0 auto;
