--- a/romantic.css
+++ b/romantic.css
@@ -10,13 +10,18 @@ body {
     font-family: 'Lobster', cursive;
     background-color: #eee;    
 }
-p {
+.logo{
+	display:inline-block
+}
+.right {
+	float:right;
+	width: 850px;
 	display:inline-block
 }
 .author {
 	 writing-mode: tb-rl;
-	display:inline-block;
 	float:right;
+	display:inline-block;
 	font-size: 1.2em;
 	font-weight: bold;
 	margin-right: 30px;
@@ -25,31 +30,20 @@ p {
     }
 .title {
 	 writing-mode: tb-rl;
+	float:right;
 	display:inline-block;
 	font-size: 1.2em;
 	font-weight: bold;
-	float:right;
 	margin-top: -40px;
 	margin-right: 10px;
 	    -webkit-writing-mode: vertical-rl;      
 	    writing-mode: vertical-rl;
     }
-div {
+.poem {
 	display: inline-block;
-	float:right;
 	margin-top: -30px;
+	float:right;
 	margin-right: 10px;
-}
-h2 {
-	display: inline-block;
-	transform: rotate(-9deg);
-	border-radius: 2px;
-	margin-right: 20px;
-	color:#f4877b;
-	float: right;
-}
-h2:hover {
-	box-shadow: 10px 14px 28px rgba(0,0,0,0.25), 10px 10px 10px rgba(0,0,0,0.22);
 }
 .logo .heart {
   opacity: 1;
@@ -102,7 +96,7 @@ h2:hover {
     width: 100%;
 //    max-width: 860px;
 }
-.gallery h1{
+.gallery h1 {
     display: inline-block;
     font-size: 2.2em;
     margin: 0 auto;
@@ -164,7 +158,7 @@ h2:hover {
     background-image: url(./pic1/13-min.jpg);   
 }
 .gallery li:nth-child(14) {
-    background-image: url(./pic1/21-min.jpg);   
+    background-image: url(./pic1/14-min.jpg);   
 }
 .gallery li:nth-child(15) {
     background-image: url(./pic1/15-min.jpg);   
@@ -185,7 +179,7 @@ h2:hover {
     background-image: url(./pic1/20-min.jpg);   
 }
 .gallery li:nth-child(21) {
-    background-image: url(./pic1/14-min.jpg);   
+    background-image: url(./pic1/21-min.jpg);   
 }
 .gallery li:nth-child(22) {
     background-image: url(./pic1/22-min.jpg);   
@@ -302,7 +296,10 @@ h2:hover {
 /* Viewport >= 420px */
 
 @media (max-width:667px) and (min-width: 375px) {
-	.author,.title,.logo,.poem {
+	.poem {
+		display:none;
+	}
+	.author,.title,.logo {
 		display:none
 	}
     .gallery {
@@ -340,8 +337,11 @@ h2:hover {
 
 /* Viewport >= 620px */
 
-@media (max-width:736px) and (min-width: 414px) {
-	.author,.title,.logo,.poem {
+@media (max-width:849px) and (min-width: 414px) {
+	.poem {
+		display:none;
+	}
+	.author,.title,.logo {
 		display:none
 	}
     .gallery {
@@ -377,6 +377,55 @@ h2:hover {
     }
 }
 
+/* Viewport >= 850 */
+
+@media (max-width:1220px) and (min-width: 850px) {
+	.right{
+		float:left
+	}
+	.poem {
+		margin-top:10px;
+	}
+	.title {
+		margin-top:10px;
+		margin-bottom: 20px;
+	}
+	.author {
+		margin-top:25px;
+	}
+    .gallery {
+        margin: 50px auto 0;
+    } 
+    .gallery ol {
+        height: 375px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    }
+    .gallery li {
+        width: 25%;
+	float: left;
+        height: 50%;
+	margin-bottom: 10px;
+        -webkit-transition: -webkit-transform 500ms ease;
+        transition: -webkit-transform 500ms ease;
+        transition: transform 500ms ease;
+        transition: transform 500ms ease, -webkit-transform 500ms ease;
+    }
+    .gallery li:hover {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+        z-index: 5;
+    }
+    .gallery a {
+        -webkit-transition: background-color 500ms ease;
+        transition: background-color 500ms ease;
+    }
+    .gallery a:hover {
+        background-color: rgba(0, 0, 0, 0);
+    }
+    .info h3 {
+        font-size: 1.2em;
+    }
+}
 /* Viewport >= 800px */
 
 @media screen and (min-width: 800px) {
