--- a/romantic.css
+++ b/romantic.css
@@ -24,6 +24,7 @@ body {
 	display:inline-block;
 	font-size: 1.2em;
 	font-weight: bold;
+	margin-top: -10px;
 	margin-right: 30px;
 	    -webkit-writing-mode: vertical-rl;      
 	    writing-mode: vertical-rl;
