--- a/poem.css
+++ b/poem.css
@@ -24,7 +24,7 @@ body {
 }
 @keyframes fade {
   0% {
-    background-color: #f00;
+    background-color: #f93131;
   }
   100% {
     background-color: #f88;
@@ -60,15 +60,6 @@ body {
     opacity: .75;
   }
 }
-.happy1 {
-  font-family: 'Kaushan Script', cursive;
-  position: relative;
-  top: 165px;
-  color: #000;
-  animation: scroll 10s linear forwards;
-  font-size: 250%;
-  z-index: 5;
-}
 .happy3 {
   font-family: 'Kaushan Script', cursive;
   position: relative;
@@ -84,6 +75,7 @@ body {
   font-family: 'Kaushan Script', cursive;
   position: relative;
 //  top: 0px;
+	margin-bottom: 10px;
   color: #000;
 //  animation: scroll 10s linear forwards;
   font-size: 200%;
