--- a/poem.css
+++ b/poem.css
@@ -66,7 +66,7 @@ body {
   margin: 0 auto;
 //  top: 160px;
   color: #000;
-//  animation: scroll2 10s linear forwards;
+  animation: scroll2 8s linear forwards;
   font-size: 95%;
   z-index: 5;
 }
@@ -77,17 +77,17 @@ body {
 //  top: 0px;
 	margin-bottom: 10px;
   color: #000;
-//  animation: scroll 10s linear forwards;
+ animation: scroll2 8s linear forwards;
   font-size: 200%;
   z-index: 5;
 }
 
 @keyframes scroll2 {
   0% {
-    transform: translateY(400px);
+    opacity: 0;
   }
   100% {
-    transform: translateY(-210px);
+   opacity: 1;
   }
 }
 @keyframes scroll {
